# zmq-shared-static

./: CMakeLists-zeromq.txt  CMakeLists.txt  HelloWorld.cc
